projetos/controle-estoque-salesforce/force-app/main/default/objects/Pedido_Reposicao__c/Pedido_Reposicao__c.object-meta.xml
<CustomObject>
    <label>Pedido de Reposição</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>Número do pedido</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pedidos de Reposição</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>