projetos/controle-estoque-salesforce/force-app/main/default/objects/Pedido_Reposicao__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <deleteConstraint>Cascade</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Produto__c</referenceTo>
    <relationshipLabel>Pedidos de Reposição</relationshipLabel>
    <relationshipName>Pedidos_de_Reposicao</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>