projetos/controle-estoque-salesforce/force-app/main/default/objects/Pedido_Reposicao__c/fields/Quantidade_Solicitada__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_Solicitada__c</fullName>
    <label>Quantidade Solicitada</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>