projetos/controle-estoque-salesforce/force-app/main/default/objects/Pedido_Reposicao__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendente</fullName>
                <default>true</default>
                <label>Pendente</label>
            </value>
            <value>
                <fullName>Enviado ao Fornecedor</fullName>
            </value>
            <value>
                <fullName>Recebido</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>